--- a/style/style.css
+++ b/style/style.css
@@ -1,77 +1,114 @@
-*{
-    margin: 0px;
-    padding: 0px;
+* {
+  margin: 0px;
+  padding: 0px;
+  font-family: 'Montserrat', sans-serif;
 }
-.topbar{
-    display: flex;
-    justify-content: space-between;
-    padding-top: 27px;
+.container {
+  max-width: 1440px;
+  display: block;
+  margin: 0 auto;
+  position: relative;
 }
-.topbar-logo{
-    width: 206px;
-    height: 102px;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    padding-left: 90px;
+.topbar-container {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 27px;
 }
-.topbar-menu{
-    display: flex;
-    justify-content: flex-end;
+.topbar-logo {
+  max-width: 206px;
+  max-height: 100px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding-left: 90px;
 }
-.topbar-menu__item{
-    display: flex;
-    align-items: center;
-    font-size: 16px;
-    margin-right: 60px;
+.topbar-menu {
+  display: flex;
+  justify-content: flex-end;
 }
-.topbar-menu__item:not(:last-child){
-    margin-right: 114px;
+.topbar-menu__item {
+  display: flex;
+  align-items: center;
+  font-size: 16px;
+  margin-right: 60px;
 }
-.background-img{
-    display: flex;
-    justify-content: center;
-    position: absolute;
-    width: 100%;
-    height: 619px;
-    left: 0px;
-    top: 155px;
+.topbar-menu__item:not(:last-child) {
+  margin-right: 114px;
 }
-.text-download{
-    display: flex;
-    justify-content: center;
-    position: absolute;
-    left: 44.08%;
-    right: 44.08%;
-    top: 24%;
-    bottom: 88.96%;
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 24px;
-    line-height: 36px;
-    text-align: center;
-    letter-spacing: 0.1px;
-    color: #F7F7F7;
+
+.header {
+  background-image: url('../images/Rectangle\ 48.png');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
-.text-order{
-    display: flex;
-    justify-content: center;
-    position: relative;
-    top: 250px;
-    color: white;
+.header-title {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  padding-top: 126px;
+  color: white;
+  font-size: 58px;
+  font-weight: bold;
 }
-.text-download__1{
-    display: flex;
-    justify-content: center;
-    position: relative;
-    top: 313px;
-    color: white;
+.header-description {
+  display: flex;
+  justify-content: center;
+  padding-top: 17px;
+  color: white;
+  padding-top: 40px;
+  font-size: 24px;
+  font-weight: 500;
 }
-.button{
-    display: flex;
-    justify-content: center;
-    color: white;
-    position: relative;
-    top: 521px;
+.header-buttons {
+  display: flex;
+  justify-content: center;
+  padding: 60px 0px 200px 0px;
+}
+.header-buttons__btn {
+  border-radius: 30px;
+  padding: 20px 70px;
+  color: white;
+  font-size: 24px;
+  font-weight: bold;
+  cursor: pointer;
+  outline: none;
+  border: 1px solid transparent;
+  transition: 0.125s ease-in-out;
+}
+.header-buttons__playstore {
+  background-color: #fa4a0c;
+  margin-right: 17px;
+}
+.header-buttons__appstore {
+  border: 1px solid white;
+  background-color: transparent;
+  margin-left: 17px;
+}
+.header-buttons__playstore:hover {
+  background-color: transparent;
+  border: 1px solid white;
+}
+.header-buttons__appstore:hover {
+  background-color: #fa4a0c;
+  border: 1px solid transparent;
+}
+.application-demo__img {
+  position: absolute;
+  top: -150px;
+  left: 50%;
+  transform: translate(-50%, 0);
+}
+.application-demo__line {
+  height: 2px;
+  width: 70%;
+  background-color: gray;
+  position: absolute;
+  bottom: 0;
+  border-radius: 2px;
+  left: 50%;
+  transform: translate(-50%, 0);
+}
+.application-demo__container {
+  position: relative;
+  height: 600px;
 }
