--- a/style/style.css
+++ b/style/style.css
@@ -120,6 +120,10 @@
   font-size: 44px;
   font-weight: 600;
 }
+.header-description{
+  display: flex;
+  justify-content: space-evenly;
+}
 .description-login__start{
   display: flex;
   justify-content: center;
@@ -151,6 +155,81 @@
   color: #252B42;
 }
 .description-text__instruction{
+  width: 500;
+  font-size: 24px;
+  color: #737373;
+  line-height: 38px;
+  padding-bottom: 154px;
+}
+.interface-app__description{
+  display: flex;
+  justify-content:space-evenly;
+}
+.interface-app__item{
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  padding-bottom: 300px;
+  padding-right: 171px;
+}
+.interface-app__img{
+  display: flex;
+  justify-content: center;
+  height: 525px;
+  width: 269px;
+}
+.interface-app__explore{
+  padding-top: 150px;
+  padding-bottom: 25px;
+  width: 700;
+  color: #FA4A0C;
+  font-size: 24px;
+}
+.interface-app__advantages{
+  padding-top: 20px;
+  padding-bottom: 30px;
+  font-size: 40px;
+  color: #252B42;
+}
+.interface-app__description{
+  width: 500;
+  font-size: 24px;
+  color: #737373;
+  line-height: 38px;
+  padding-bottom: 154px;
+}
+.payment-info__description{
+  display: flex;
+  justify-content: space-evenly;
+}
+.payment-info__img{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  height: 600px;
+  width: 302px;
+}
+.payment-info__item{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding-bottom: 300px;
+  padding-left: 171px;
+}
+.payment-info__checkout{
+  padding-top: 150px;
+  padding-bottom: 25px;
+  width: 700;
+  color: #FA4A0C;
+  font-size: 24px;
+}
+.payment-info__advantages{
+  padding-top: 20px;
+  padding-bottom: 30px;
+  font-size: 40px;
+  color: #252B42;
+}
+.payment-info__deliver{
   width: 500;
   font-size: 24px;
   color: #737373;
