--- a/style/style.css
+++ b/style/style.css
@@ -9,6 +9,20 @@
   margin: 0 auto;
   position: relative;
 }
+.sm-container {
+  max-width: 1040px;
+  display: block;
+  margin: 0 auto;
+  position: relative;
+}
+.link-btn{
+  text-decoration: none;
+  color: #ffffff;
+}
+.link-item{
+  text-decoration: none;
+  color: #5C5C5C;
+}
 .topbar-container {
   display: flex;
   justify-content: space-between;
@@ -21,6 +35,7 @@
   justify-content: flex-start;
   align-items: center;
   padding-left: 90px;
+  padding-bottom: 27px;
 }
 .topbar-menu {
   display: flex;
@@ -33,8 +48,9 @@
   width: 600;
   margin-right: 60px;
 }
-.topbar-menu__home{
-  color: #FA4A0C;
+.topbar-menu__home {
+  color: #fa4a0c;
+  text-decoration: none;
 }
 .topbar-menu__item:not(:last-child) {
   margin-right: 114px;
@@ -116,172 +132,96 @@
   position: relative;
   height: 600px;
 }
-.description-text{
-  display: flex;
-  justify-content: center;
-  padding-top: 80px;
-  padding-bottom: 60px;
+.description-section{
+  padding: 80px 0 80px 0;
+}
+
+.description-section__main-title {
+  text-align: center;
+  padding: 80px 0 110px 0;
   font-size: 44px;
   font-weight: 600;
 }
-.header-description{
+.description-section__row {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
+  padding-bottom: 54px;
 }
-.description-login__start{
+.description-section__row.reverse {
+  flex-direction: row-reverse;
+}
+.description-section__row .description-section__column-img {
   display: flex;
-  justify-content: center;
-  flex-direction: column;
-  padding-bottom: 300px;
-  padding-left: 171px;
+  flex: 1 0 44%;
 }
-.description-text__login{
-  color: #252B42;
-}
-.description-login__img{
+.description-section__row .description-section__column-info {
   display: flex;
-  justify-content: flex-start;
   align-items: center;
-  height: 600px;
-  width: 302px;
-}
-.description-text__account{
-  padding-top: 200px;
-  padding-bottom: 25px;
-  width: 700;
-  color: #FA4A0C;
-  font-size: 24px;
-}
-.description-text__faststart{
-  padding-top: 20px;
-  padding-bottom: 30px;
-  font-size: 40px;
-  color: #252B42;
-}
-.description-text__instruction{
-  width: 500;
-  font-size: 24px;
-  color: #737373;
-  line-height: 38px;
-  padding-bottom: 154px;
-}
-.interface-app__description{
-  display: flex;
-  justify-content:space-evenly;
-}
-.interface-app__item{
-  display: flex;
-  justify-content: flex-start;
-  flex-direction: column;
-  padding-bottom: 300px;
-  padding-right: 171px;
-}
-.interface-app__img{
-  display: flex;
-  justify-content: center;
-  height: 525px;
-  width: 269px;
-}
-.interface-app__explore{
-  padding-top: 150px;
-  padding-bottom: 25px;
-  width: 700;
-  color: #FA4A0C;
-  font-size: 24px;
-}
-.interface-app__advantages{
-  padding-top: 20px;
-  padding-bottom: 30px;
-  font-size: 40px;
-  color: #252B42;
-}
-.interface-app__description{
-  width: 500;
-  font-size: 24px;
-  color: #737373;
-  line-height: 38px;
-  padding-bottom: 154px;
-}
-.payment-info__description{
-  display: flex;
-  justify-content: space-evenly;
-}
-.payment-info__img{
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  height: 600px;
-  width: 302px;
-}
-.payment-info__item{
-  display: flex;
   justify-content: center;
   flex-direction: column;
-  padding-bottom: 300px;
-  padding-left: 171px;
+  flex: 1 0 56%;
 }
-.payment-info__checkout{
-  padding-top: 150px;
-  padding-bottom: 25px;
-  width: 700;
-  color: #FA4A0C;
+.description-section__row.reverse .description-section__column-img {
+  justify-content: flex-end;
+}
+.description-section__benefit-text {
+  font-weight: 700;
+  color: #fa4a0c;
   font-size: 24px;
 }
-.payment-info__advantages{
-  padding-top: 20px;
-  padding-bottom: 30px;
+.description-section__title {
+  padding: 20px 0 30px 0;
   font-size: 40px;
-  color: #252B42;
+  color: #252b42;
 }
-.payment-info__deliver{
-  width: 500;
+.description-section__description {
+  font-weight: 500;
   font-size: 24px;
   color: #737373;
   line-height: 38px;
-  padding-bottom: 154px;
 }
-.section{
+
+.section {
   background-image: url('../images/Rectangle\ 47.png');
   background-repeat: no-repeat;
-  height: 516px;
   background-size: cover;
 }
-.section-top{
+.section-top {
   display: flex;
   justify-content: center;
   padding-top: 150px;
   padding-bottom: 10px;
   font-weight: 700;
   font-size: 47px;
-  color: #FFFFFF;
+  color: #ffffff;
 }
-.section-row{
+.section-row {
   display: flex;
   justify-content: center;
   padding-top: 20px;
   padding-bottom: 30px;
   font-weight: 500;
   font-size: 24px;
-  color: #FFFFFF;
+  color: #ffffff;
 }
-.section-buttons{
+.section-buttons {
   display: flex;
   justify-content: center;
   padding-bottom: 161px;
-  padding-top:40px;
+  padding-top: 40px;
 }
-.footer{
+.footer {
   display: flex;
   justify-content: space-around;
 }
-.footer-logo{
+.footer-logo {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  height: 246px;
   padding-right: 250px;
+  padding-bottom: 27px;
 }
-.footer-icons{
+.footer-icons {
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -289,17 +229,14 @@
   height: 33px;
   width: 33px;
 }
-.footer-icons__items{
+.footer-icons__items {
   display: flex;
   justify-content: center;
   padding-right: 33px;
 }
-.footer-text{
-  display: flex;
-  justify-content: center;
-  flex-direction: row;
+.footer-text {
   padding-left: 300px;
   font-size: 12px;
-  width: 700;
-  color: #5C5C5C;
+  font-weight: 700;
+  color: #5c5c5c;
 }
